# Project-demo-Zixing-Wang

./: README.md
1st year intern/Demo videos Mechanical fixture/: Explanation.txt
1st year intern/Demo videos Mechanical fixture/Demo videos collision detection piezo elec circuit/: Explanation.txt
2nd year intern/Demo video Rviz simulation/: Explanation.txt
2nd year intern/Source code STM32 ROS communication in C++/: Disclaimer.txt
2nd year intern/Source code STM32 ROS communication in C++/ros_stm32_rospart-master/devel/: .catkin  .rosinstall  local_setup.sh  setup.sh
2nd year intern/Source code STM32 ROS communication in C++/ros_stm32_rospart-master/src/ekf_pose/: CMakeLists.txt
2nd year intern/Source code STM32 ROS communication in C++/ros_stm32_rospart-master/src/mocap_optitrack/: CMakeLists.txt
2nd year intern/Source code STM32 ROS communication in C++/ros_stm32_rospart-master/src/mocap_optitrack/config/: mocap.yaml
2nd year intern/Source code STM32 ROS communication in C++/ros_stm32_rospart-master/src/mocap_optitrack/include/mocap_optitrack/: mocap_config.h  socket.h
2nd year intern/Source code STM32 ROS communication in C++/ros_stm32_rospart-master/src/mocap_optitrack/launch/: mocap.launch
2nd year intern/Source code STM32 ROS communication in C++/ros_stm32_rospart-master/src/mocap_optitrack/src/: mocap_node.cpp  socket.cpp
2nd year intern/Source code of Rviz simulation C++/: Link to github repo.txt
control related coursework/: github repo link.txt
(+25 files in other folders)
